# HAL

./: .gitignore  CMakeLists.txt  usefull.txt
config/: leg_config.json
include/: UM7.h  hal.h
src/: UM7.cc  hal.cc  hal_bringup.cc  hal_core.cc  hal_kinematics.cc  kinematics.cc
